--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
   - psql -c "CREATE USER test WITH PASSWORD 'test'"
   - psql -c 'ALTER ROLE test WITH SUPERUSER'
   - psql -c 'CREATE DATABASE test_db;' -U postgres
-script: export DATABASE_URL=jdbc:postgres://localhost:5432/test_db?user=test&password=test && lein2 do clean, javac, test
+script: export DATABASE_URL=jdbc:postgresql://localhost:5432/test_db?user=test&password=test && lein2 do clean, javac, test
+
 jdk:
   - oraclejdk8
