--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,19 @@
+dist: xenial
 language: clojure
-lein: lein2
+lein: lein
 addons:
   postgresql: "9.4"
 services:
   - postgresql
+before_install:
+  - rm "${JAVA_HOME}/lib/security/cacerts"
+  - ln -s /etc/ssl/certs/java/cacerts "${JAVA_HOME}/lib/security/cacerts"
 before_script:
   - psql -c "CREATE USER test WITH PASSWORD 'test'"
   - psql -c 'ALTER ROLE test WITH SUPERUSER'
   - psql -c 'CREATE DATABASE test_db;' -U postgres
-script: env DATABASE_URL="jdbc:postgresql://localhost:5432/test_db?user=test&password=test" DATABASE_URL_TEMPLATE="jdbc:postgresql://localhost:5432/DATABASE?user=test&password=test" lein2 do clean, javac, test
+script: env DATABASE_URL="jdbc:postgresql://localhost:5432/test_db?user=test&password=test" DATABASE_URL_TEMPLATE="jdbc:postgresql://localhost:5432/DATABASE?user=test&password=test" lein do clean, javac, test
 
 jdk:
-  - oraclejdk8
+  - oraclejdk9
+  - openjdk9
